--- a/docs/newweb2 NewVersion.css
+++ b/docs/newweb2 NewVersion.css
@@ -773,17 +773,24 @@ span.text {
     height: 200px;
     width: 250px;
     border-radius: 7px;
+    box-shadow: 0 0 10px black;
+    transition: 1.5s ease;
 }
 .nightoutPhotos video {
     height: 200px;
     width: 250px;
     border-radius: 7px;
     border: 2px solid black;
+    transition: 1.5s ease;
 }
 #page3 {
     width: 100%;
 }
 
+.nightoutPhotos img:hover {
+    position: relative;
+    transform: scale(1.2);
+}
 /* personas */
 
 .personas {
@@ -809,6 +816,11 @@ span.text {
     align-self: center;
     background-color: #DFF7F2;
     box-shadow: 0 0 10px inset #ffffff;
+    transition: .5s ease;
+}
+.personas div:hover {
+    box-shadow: 0 0 10px darkcyan;
+    background-color: #54ebca;
 }
 .personas img {
     height: 200px;
@@ -1030,280 +1042,4 @@ select {
     border-radius: 20px;
     margin-top: 20px;
     width: 280px;
-}
-
-
-/* mobile responsive */
-
-/* Mobile responsiveness */
-@media screen and (max-width: 600px) {
-    body {
-        overflow-x: hidden;
-        height: 100%;
-        width: 100%;
-    }
-    /* img sect */
-    #page2 {
-        width: 159%;
-        left: 219px;
-        position: relative;  
-        display: grid;
-    }
-    #page2 img {
-        justify-self: center;
-        display: grid;
-    }
-    .nightoutPhotos {
-        display: grid;
-        width: 139%;
-        padding: 20px;
-        margin-left: 85px;
-        border-radius: 60px;
-        }
-    .nightoutPhotos .one {
-        display: grid;
-        margin: 0 auto;
-    }
-    .nightoutPhotos .two {
-        display: grid;
-        margin: 0 auto;
-    }
-    .nightoutPhotos img {
-        height: 308px;
-        width: 149%;
-        border-radius: 7px;
-        position: relative;
-        left: -117px;
-
-    }
-    .nightoutPhotos video {
-position: relative;
-        height: 275px;
-        width: 147%;
-        border-radius: 7px;
-        left: -114px;
-        }
-    #videoHero {
-        border-radius: 196px;
-        width: 105%;
-        height: 99.5%;
-        border-radius: 196px;
-        position: relative;
-        left: 190px;
-        top: 176px;
-        transform: scale(.1);
-        }
-    /* personas */
-    .personas div {
-        width: 811px;
-        position: relative;
-        left: 83px;
-        }
-
-    /* qr sect */
-
-    .qrsect {
-        width: 400px;
-        /* padding: 20px; */
-        /* border-radius: 20px; */
-        align-content: center;
-        justify-content: center;
-        margin: 0 auto;
-        position: relative;
-        left: 0px;
-        /* text-align: center; */
-    }
-    .inscription {
-        width: 800px;
-        position: relative;
-        left: 203px;
-        }
-/* cta form */
-
-.firstLeft input {
-    height: 98px;
-    width: 100px;
-    font-size: 10px;
-    font-weight: 600;
-}
-.left input {
-    height: 98px;
-    width: 100px;
-    font-size: 10px;
-    font-weight: 600;
-}
-.center input {
-    height: 98px;
-    width: 100px;
-    font-size: 10px;
-    font-weight: 600;
-}
-.right button {
-    height: 98px;
-    width: 100px;
-    padding: 10px;
-    font-size: 17px;
-}
-.ctaForm {
-    left: 395px;
-    width: 595px;
-    transform: scale(1.3);
-    display: flex;
-}
-
-/* navbar */
-.sticky-bottom-navbar {
-    left: 125px;
-    width: 49%;
-}
-    /* quiz */
-    .quiz {
-        left: 0px;
-        position: relative;
-    }
-    #quiz-container {
-        width: 734px;
-        left: 295px;
-        position: relative;
-    }
-    /* header sect */
-    
-    .organiseheader {
-        font-size: 101px;
-        POSITION: RELATIVE;
-        top: 150px
-        }
-    #powerRing h1 {
-        font-size: 35px;
-        transform: scale(2);
-        position: relative;
-        left: 46px;
-        }
-    .personasHeader {
-        font-size: 35px;
-    }
-    .testiHeader {
-        font-size: 35px;
-    }
-    .inscriptHeader {
-        font-size: 35px;
-    }
-    .quizHead {
-        font-size: 35px;
-    }
-    .surveyDiv {
-        transform: scale(.79);
-        position: relative;
-        left: 200px;
-        }
-    
-    /* footer */
-    footer {
-        position: relative;
-        top: 10px;
-        width: 966px;
-        height: 300px;
-        }
-    .footerlogo {
-        width: 80px;
-        position: relative;
-        left: -7px;
-        top: 20px;
-        height: 80px;
-    }
-    footer ul {
-        display: grid
-    ;
-        position: relative;
-        left: -55px;
-        top: 5px;
-    }
-    .socials img {
-        height: 55px;
-        width: 55px;
-        display: inline-flex
-    ;
-        position: relative;
-        left: 20px;
-        margin-top: 2px;
-        top: 20px;
-    }
-    footer input {
-        margin-bottom: 10px;
-        border-radius: 20px;
-        padding: 5px;
-        margin-top: 27px;
-    }
-    footer div {
-        width: 190px;
-        position: relative;
-        left: 10px;
-        margin-inline: 8px;
-        padding: 10px;
-        border: 1px solid black;
-    }
-        /* herosect */        
-        .heroSect h1 {
-                font-size: 25px;
-                position: relative;
-                top: -259px;
-                margin-top: 185px;
-        }
-        .fontSectDiv h2 {
-            position: relative;
-            top: -259px;
-            font-size: 21px;
-            color: #f0f7ff;
-        }
-        .fontSectDiv h4 {
-            position: relative;
-            top: -262px;
-            color: #f0f7ff;
-            font-size: 16px;
-        }
-        .brandName {
-            font-size: 59px;
-            position: relative;
-            top: 5px;
-            color: #f0f7ffa9;
-            margin-top: 303px;
-        }
-        .heroSect {
-            border: none;
-            width: 90%;
-            height: 631px;
-            margin-top: 39px;
-            display: grid;
-            transform: scale(.8);
-        }
-        
-        .HeroImage {
-            height: 59px;
-            width: 59px;
-            border-radius: 50%;
-            position: relative;
-            top: -156px;
-        }
-        .brandName {
-            font-size: 55px;
-            position: relative;
-            top: 17px;
-            color: #f0f7ffa9;
-            margin-top: 303px;
-        }
-        .fontSectDiv button {
-            position: relative;
-            top: -278px;
-            padding: 15px;
-            font-size: 11px;
-            border-radius: 10px;
-            width: 156px;
-        }
-
-}
-
-@media screen and (max-width: 600px) {
-    .heroSect h1 {
-        font-size: 25px !important; /* Overrides any inline styles */
-    }
 }
